--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jwt-simple": "^0.5.6",
     "mongoose": "^7.0.1"
   }
 }
